--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sporty Town</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="/src/components/js/jquery-3.2.1.min.js"></script>
+    <script src="/src/components/js/createjs.min.js"></script>
+    <script src="/src/components/js/TimeTable.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
